--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,29 +2,26 @@
 # https://docs.github.com/en/code-security/supply-chain-security/keeping-your-dependencies-updated-automatically/configuration-options-for-dependency-updates
 version: 2
 updates:
-  # Maintain dependencies for Go modules
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: gomod
+    directory: /
     schedule:
-      # Check for updates to Go modules every weekday
-      interval: "daily"
+      interval: weekly
     groups:
-      # Group all terraform-plugin-(go|sdk|framework|testing) dependencies together
-      "terraform-plugin":
+      golang:
+        applies-to: security-updates
         patterns:
-          - "github.com/hashicorp/terraform-plugin-*"
-  - package-ecosystem: "gomod"
-    directory: "/tools"
+          - "golang.org/*"
+      hashicorp:
+        applies-to: security-updates
+        patterns:
+          - "github.com/hashicorp/*"
+    open-pull-requests-limit: 0
+
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "daily"
-  - package-ecosystem: "github-actions"
-    directory: "/"
+      interval: weekly
     groups:
-      "github-actions":
+      actions:
         patterns:
-          - "*" # Group all GitHub Actions dependencies together
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-      timezone: "Etc/UTC"
+          - "*"
